apps/pending-task/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pendingtask
  labels:
    name: pendingtask
