apps/pending-task/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy-pendingtask
  namespace: pendingtask
spec:
  selector:
    matchLabels:
      app: db-pendingtask
  replicas: 1
  template:
    metadata:
      labels:
        app: db-pendingtask
    spec:
      containers:
      - name: db-pendingtask
        image: postgres:alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-pendingtask-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-pendingtask-storage
        emptyDir: {}
