apps/pending-task/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy-pedingtask
  namespace: pendingtask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pedingtask
  template:
    metadata:
      labels:
        app: web-pedingtask
    spec:
      containers:
      - name: web-pedingtask
        image: julianzanetti/pending-task:1.0
        ports:
        - containerPort: 8000
