apps/pending-task/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-pendingtask
  namespace: pendingtask
spec:
  selector:
    app: db-pendingtask
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
