apps/pending-task/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-pedingtask
spec:
  selector:
    app: web-pedingtask
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
