apps/pending-task/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pendingtask-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pendingtask.julianzanetti-lab.com
      secretName: pendingtask-tls
  rules:
    - host: pendingtask.julianzanetti-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc-pedingtask
                port:
                  number: 8000
